# llm-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  coverage.json  pyproject.toml
docs/: acquisition-tools.md  context-tools.md  decay-tools.md  dependency-tools.md  export-import-tools.md  knowledge-tools.md  linking-tools.md  memory-tools.md  schema-tools.md  similarity-tools.md  tools-reference.md  versioning-tools.md
docs/agents/architecture/: ADR-001-v1.1.0-features.md  ADR-001-v1.7.0-memory-features.md  v1.7.0-implementation-guide.md
docs/agents/coding_rules/: v1.1.0-implementation-guidelines.md
docs/agents/troubleshooting/: v1.1.0-implementation-issues.md  v1.7.0-release-notes.md
docs/tools/: README.md  agent-tools.md  decay-tools.md  export-import-tools.md  knowledge-tools.md  linking-tools.md  memory-tools.md  similarity-tools.md
src/: __init__.py  __main__.py  exceptions.py  server.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  database.py
src/db/repositories/: __init__.py  agent_repository.py  knowledge_repository.py  memory_repository.py
src/embeddings/: __init__.py  base.py  local.py  openai.py
src/llm_memory/: __init__.py  __main__.py  server.py
src/llm_memory/config/: __init__.py  settings.py
src/llm_memory/db/: __init__.py  database.py
src/llm_memory/db/repositories/: __init__.py  agent_repository.py  knowledge_repository.py  memory_repository.py
src/llm_memory/embeddings/: __init__.py  base.py  local.py  openai.py
src/llm_memory/models/: __init__.py  knowledge.py  memory.py
src/llm_memory/services/: __init__.py  agent_service.py  consolidation_service.py  decay_service.py  embedding_service.py  export_import_service.py  importance_service.py  knowledge_service.py  linking_service.py  memory_service.py  namespace_service.py  tokenization_service.py
src/llm_memory/tools/: __init__.py  agent_tools.py  batch_tools.py  consolidation_tools.py  decay_tools.py  export_import_tools.py  importance_tools.py  knowledge_tools.py  linking_tools.py  memory_tools.py  similarity_tools.py
src/llm_memory/utils/: rrf.py  validators.py
src/models/: __init__.py  acquisition.py  agent.py  context.py  decay.py  dependency.py  export_import.py  linking.py  memory.py  schema.py  versioning.py
src/services/: __init__.py  agent_service.py  consolidation_service.py  context_building_service.py  decay_service.py  dependency_service.py  embedding_service.py  export_import_service.py  file_hash_service.py  graph_traversal_service.py  importance_service.py  knowledge_service.py  knowledge_sync_service.py  linking_service.py  lsh_index.py  memory_service.py  namespace_service.py  project_scan_service.py  schema_service.py  semantic_cache.py  session_learning_service.py  staleness_service.py  tokenization_service.py  versioning_service.py
src/tools/: __init__.py  acquisition_tools.py  agent_tools.py  batch_tools.py  consolidation_tools.py  context_tools.py  decay_tools.py  dependency_tools.py  export_import_tools.py  importance_tools.py  knowledge_tools.py  linking_tools.py  memory_tools.py  schema_tools.py  similarity_tools.py  versioning_tools.py
src/utils/: config_parser.py  file_scanner.py  path_filter.py  summarization.py  token_counter.py  validators.py
tests/: __init__.py  conftest.py  test_acquisition_models.py  test_acquisition_services.py  test_acquisition_tools.py  test_batch_operations.py  test_config.py  test_consolidation.py  test_context_building.py  test_context_tools.py  test_database.py  test_decay.py  test_dependency.py  test_embeddings.py  test_export_import.py  test_file_utils.py.skip  test_full_flow.py  test_graph_traversal.py  test_hybrid_search.py  test_importance.py  test_integration.py  test_linking.py  test_migration.py  test_models.py  test_performance.py  test_schema.py  test_semantic_cache.py  test_services.py  test_smart_chunking.py  test_token_counter.py  test_versioning.py
