[project]
name = "llm-memory"
version = "0.1.0"
description = "LLM Multimodal Persistent Memory Storage - MCP Server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "LLM Memory Team", email = "team@llm-memory.dev" }
]
keywords = ["llm", "memory", "mcp", "vector-search", "embeddings", "semantic-search", "knowledge-base", "agent-communication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.19.0",
    "sqlite-vec>=0.1.0",
    "pysqlite3>=0.5.0; python_version>='3.14'",
]

[project.urls]
Homepage = "https://github.com/VoidogStudio/llm-memory"
Documentation = "https://github.com/VoidogStudio/llm-memory/wiki"
Repository = "https://github.com/VoidogStudio/llm-memory"
"Bug Tracker" = "https://github.com/VoidogStudio/llm-memory/issues"
Changelog = "https://github.com/VoidogStudio/llm-memory/blob/main/CHANGELOG.md"

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
llm-memory = "llm_memory.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=llm_memory --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["llm_memory"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
